<resources>
    <string name="app_name">凯石财富</string>
    <string name="tip_double_click_exit">再按一次退出</string>
    <string name="fundSelected">基金精选</string>
    <string name="fundGroup">基金组合</string>
    <string name="myAccount">我的账户</string>
    <string name="app_txt_err">哎哟！出错了！</string>
    <string name="app_txt_err_404">你访问的页面飞了~</string>
    <string name="btn_txt_again_loading">重新加载</string>
    <string name="btn_txt_to_home_page">回到首页</string>
    <string name="btn_txt_buy_now">立即购买</string>
    <string name="btn_txt_confirm">确定</string>
    <string name="btn_txt_cancel">取消</string>
    <string name="txt_in_loading">加载中...</string>
    <string name="txt_no_more_data">没有更多数据</string>
    <string name="txt_fast_invest">快速投资</string>
    <string name="txt_brand">品牌</string>
    <string name="txt_guarantee">保障</string>
    <string name="txt_major">专业</string>
    <string name="txt_service">服务</string>
    <string name="txt_home_fund_selected_bottom_des">平台账户自资金由民生银行实时监管</string>
    <string name="txt_phone_number">手机号</string>
    <string name="txt_phone_number2">手机号</string>
    <string name="txt_get_verification_code">获取验证码</string>
    <string name="txt_verification_code">验证码</string>
    <string name="txt_please_input_6_verification_code">请输入6位验证码</string>
    <string name="txt_dynamic_password">动态密码</string>
    <string name="txt_password">密码</string>
    <string name="txt_login">登录</string>
    <string name="txt_login_success">登录成功</string>
    <string name="txt_login_fail">登录失败</string>
    <string name="txt_use_password_login">使用密码登录</string>
    <string name="txt_login_err">登录遇到问题</string>
    <string name="txt_quick_account_1">快速开户(1/3)</string>
    <string name="txt_quick_account_2">快速开户(2/3)</string>
    <string name="txt_quick_account_3">快速开户(3/3)</string>
    <string name="txt_name">姓名</string>
    <string name="txt_real_name">真实姓名</string>
    <string name="txt_hold_card_person_name">持卡人姓名</string>
    <string name="txt_bank_card_number">银行卡号</string>
    <string name="txt_bank_name">银行名称</string>
    <string name="txt_bank_card">银行卡</string>
    <string name="txt_please_input_red_change_code">请输入红包兑换码</string>
    <string name="txt_please_input_bank_card_number">请输入银行卡号</string>
    <string name="txt_id_card_number">身份证号</string>
    <string name="txt_please_input_id_card_number">请输入身份证号</string>
    <string name="txt_please_input_18_id_card_number">请输入18位身份证号</string>
    <string name="txt_bank_reserve_phone_number">银行预留手机号</string>
    <string name="txt_up_topic">上一题</string>
    <string name="txt_next_step">下一步</string>
    <string name="txt_setting_transaction_password">设置交易密码</string>
    <string name="txt_confirm_transaction_password">确认交易密码</string>
    <string name="txt_update_login_pass">修改登录密码</string>
    <string name="txt_login_pass_modify">登录密码修改</string>
    <string name="txt_login_pass_setting">登录密码设置</string>
    <string name="txt_login_pass">登录密码</string>
    <string name="txt_transaction_pass_modify">交易密码修改</string>
    <string name="txt_transaction_pass_setting">交易密码设置</string>
    <string name="txt_primitive_login_pass">原登录密码</string>
    <string name="txt_primitive_transaction_pass">原交易密码</string>
    <string name="txt_new_transaction_pass">新交易密码</string>
    <string name="txt_new_login_pass">新登录密码</string>
    <string name="txt_confirm_new_pass">确认新密码</string>
    <string name="txt_update_transaction_pass">修改交易密码</string>
    <string name="txt_reset_transaction_pass">重置交易密码</string>
    <string name="txt_bind_phone">绑定手机</string>
    <string name="txt_identity_info">身份信息</string>
    <string name="txt_contact_address">联系地址</string>
    <string name="txt_E_mail">电子邮箱</string>
    <string name="txt_save">保存</string>
    <string name="txt_fixed_investment">定投</string>
    <string name="txt_i_want_fixed_investment">我要定投</string>
    <string name="txt_fixed_investment_money">定投金额</string>
    <string name="txt_fixed_investment_cycle">定投周期</string>
    <string name="txt_min_fixed_investment_money_10">最低定投金额10元</string>
    <string name="txt_total_amount">总金额(元)</string>
    <string name="txt_current_assets">当前资产(元)</string>
    <string name="txt_edit">编辑</string>
    <string name="txt_delete">删除</string>
    <string name="txt_stock_component">股票成分</string>
    <string name="txt_shares_name">股票名称</string>
    <string name="txt_bond_component">债券成分</string>
    <string name="txt_heavy_warehouse_holding">重仓持股</string>
    <string name="txt_code">代码</string>
    <string name="txt_proportion">占比</string>
    <string name="txt_my_red_package">我的红包</string>
    <string name="txt_please_input_new_login_pass">请输入新登录密码</string>
    <string name="txt_please_input_confirm_new_pass">请输入确认密码</string>
    <string name="txt_please_input_primitive_login_pass">请输入原登录密码</string>
    <string name="txt_please_input_login_pass">请输入登录密码</string>
    <string name="txt_please_input_password">请输入密码</string>
    <string name="txt_please_input_phone_number">请输入手机号</string>
    <string name="txt_please_input_email">请输入邮箱地址</string>
    <string name="txt_please_input_correct_email">请输入正确的邮箱地址</string>
    <string name="txt_please_input_sms_code">请输入短信验证码</string>
    <string name="txt_please_send_sms_code">请先发送短信验证码</string>
    <string name="txt_phone_number_format_err">手机号码格式不正确</string>
    <string name="txt_phone_number_already_register">手机号码已注册</string>
    <string name="txt_verification_code_overdue_re_get">验证码已过期，请重新获取！</string>
    <string name="txt_you_input_verification_code_err">您输入的验证码不正确！</string>
    <string name="txt_please_input_verification_code">请输入验证码</string>
    <string name="txt_please_input_transaction_password">请输入交易密码</string>
    <string name="txt_forget_password">忘记密码?</string>
    <string name="txt_sms_code_send_success">短信验证码发送成功</string>
    <string name="txt_sms_code_send_err">短信验证码发送失败</string>
    <string name="txt_login_register_err">登录或注册失败</string>
    <string name="txt_register_phone_number">注册手机号</string>
    <string name="txt_register_fail">注册失败</string>
    <string name="txt_other">其它</string>
    <string name="txt_login_or_register">登录或注册</string>
    <string name="txt_ling_xian_ying">领先盈</string>
    <string name="txt_fund">基金</string>
    <string name="txt_fund_info">基金信息</string>
    <string name="txt_fund_name">基金名称</string>
    <string name="txt_risk_evaluation">风险测评</string>
    <string name="txt_reset_repeat">重新测评</string>
    <string name="txt_type_radical">激进型</string>
    <string name="txt_welfare">福利</string>
    <string name="txt_invite_friends">邀请好友</string>
    <string name="txt_no_invite_friends">亲，您还没有邀请好友哟~\n 快去邀请吧，么么哒~</string>
    <string name="txt_no_buy_lx_ying_to_buy">亲，您还没有买过领先盈，\n买点吧！</string>
    <string name="txt_invite_friends_scan_2_code">邀请好友扫描二维码</string>
    <string name="txt_my_invite">我的邀请</string>
    <string name="txt_news">消息</string>
    <string name="txt_temp_no_news">暂无消息</string>
    <string name="txtCurrentPageAndTotalPage">%1$d/%2$d</string>
    <string name="txt_account_settings">账户设置</string>
    <string name="txt_contact_mode">联系方式</string>
    <string name="txt_login_pass_rule_prompt">*8位以上,包括数字、大小写字符、特殊字符任意两种</string>
    <string name="txt_update_transaction_pass_rule_prompt">*密码需为数字和字符组合</string>
    <string name="txt_province_city_area">省、市、区</string>
    <string name="txt_street">街道</string>
    <string name="txt_detailed_address">详细地址</string>
    <string name="txt_please_input_detailed_address">请输入详细地址</string>
    <string name="txt_view_details">查看详情</string>
    <string name="txt_read_protocol_and_agree">我已阅读并同意《凯石财富注册协议》,《投资者权益须知》</string>
    <string name="txt_read_protocol_book">我已阅读并同意《定期定投投资业务协议》,《银行自动转账授权书》</string>
    <string name="txt_selector_user_protocol">请选择用户协议</string>
    <string name="txt_position">持仓</string>
    <string name="txt_position_amount">持仓量(万元)</string>
    <string name="txt_on_the_way">在途</string>
    <string name="txt_my_bank_card">我的银行卡</string>
    <string name="txt_my_contact_phone">我的联系电话</string>
    <string name="txt_my_contact_address">我的联系地址</string>
    <string name="txt_limit_info">限额信息</string>
    <string name="txt_customer_service_hotline">客服热线：400-643-3389</string>
    <string name="txt_near_year_profit">近一年收益</string>
    <string name="txt_since_establishment_profit">成立以来收益</string>
    <string name="txt_net_worth_growth_rate">净值增长率</string>
    <string name="txt_rate">费率</string>
    <string name="txt_net_asset_value">单位净值</string>
    <string name="txt_group_asset_value">组合净值</string>
    <string name="txt_excellent_shares_mix_fund">优选股混基金</string>
    <string name="txt_data_sources">数据来源:%s</string>
    <string name="txt_estimate_money_save_money">估算费用%%s元，已省%%s元</string>
    <string name="txt_update_date">更新日期:%s</string>
    <string name="txt_risk_grade">风险等级</string>
    <string name="txt_yield_trend">收益率走势</string>
    <string name="txt_near_7_day">近7天</string>
    <string name="txt_near_1_month">近一个月</string>
    <string name="txt_near_3_month">近三个月</string>
    <string name="txt_near_1_year">近一年</string>
    <string name="txt_today">今天</string>
    <string name="txt_fund_archives">基金档案</string>
    <string name="txt_fund_manager">基金经理</string>
    <string name="txt_fund_company">基金公司</string>
    <string name="txt_fund_scale">基金规模</string>
    <string name="txt_establish_time">成立时间</string>
    <string name="txt_time">时间</string>
    <string name="txt_day_rise_drop">日涨跌</string>
    <string name="txt_invest_strategy">投资策略</string>
    <string name="txt_asset_allocation">资产配置</string>
    <string name="txt_allocation_proportion">配置比例</string>
    <string name="txt_cost_explain">费用说明</string>
    <string name="txt_invest_fund">投资基金</string>
    <string name="txt_fund_type">基金类型</string>
    <string name="txt_subscription_fee">申购费</string>
    <string name="txt_register_agreement">凯石财富网注册协议</string>
    <string name="txt_yesterday_profit">昨日收益</string>
    <string name="txt_cumulative_profit">累计收益</string>
    <string name="txt_recharge">充值</string>
    <string name="txt_exchange">兑换</string>
    <string name="txt_exit_login">退出登录</string>
    <string name="txt_more_information">更多信息</string>
    <string name="txt_job_category">职位类别</string>
    <string name="txt_add_contact_mode">添加联系方式</string>
    <string name="txt_add_contact_address">添加联系地址</string>
    <string name="txt_not_modify">不可更改</string>
    <string name="txt_setting_def">设置为默认</string>
    <string name="txt_i_think_modify_transaction_pass">我想修改交易密码</string>
    <string name="txt_i_forget_transaction_pass">我忘记交易密码了</string>
    <string name="txt_blend_type">混合型</string>
    <string name="txt_near_3year_profit_double">近3年收益翻倍</string>
    <string name="txt_performance_ranking">业绩排名</string>
    <string name="txt_profit_repay">收益回报</string>
    <string name="txt_similar_ranking">同类排名</string>
    <string name="txt_similar_average">同类平均</string>
    <string name="txt_open">展开</string>
    <string name="txt_un_open">收起</string>
    <string name="txt_next_buckle_money_date">下次扣款日期：%s</string>
    <string name="txt_unknown_err">未知错误</string>
    <string name="txt_success">成功</string>
    <string name="txt_autograph_error">签名错误</string>
    <string name="txt_invalid_token">无效token</string>
    <string name="txt_overdue_token">过期token</string>
    <string name="txt_inner_err">内部错误</string>
    <string name="txt_no_support">不支持</string>
    <string name="txt_entity_no_exist">实体不存在</string>
    <string name="txt_register_success">注册成功</string>
    <string name="txt_login_invalid_re_login">登录实现请重新登录</string>
    <string name="txt_invalid_id_card_number">无效的身份证号码</string>
    <string name="txt_account_age_scope">年龄未满18岁或大于70岁无法开户</string>
    <string name="txt_you_input_info_bank_reserve_mismatch">您输入的银行卡号、身份信息、手机号码与银行预留不匹配</string>
    <string name="dialogPayPasswordNumber0">0</string>
    <string name="dialogPayPasswordNumber1">1</string>
    <string name="dialogPayPasswordNumber2">2</string>
    <string name="dialogPayPasswordNumber3">3</string>
</resources>