<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activityBackgroundColor"
        android:orientation="vertical">



        <com.kscf.app.android.widget.DefToolBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background="@color/blue"
            app:isShowReturnView="true"
            app:title="@string/txt_update_login_pass"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
            android:id="@+id/item_primitive_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/size_12dp"
            app:hintText="@string/txt_please_input_primitive_login_pass"
            app:leftText="@string/txt_primitive_login_pass"/>

        <include layout="@layout/layout_line_horizontal"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
            android:id="@+id/item_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/size_12dp"
            app:hintText="@string/txt_please_input_new_login_pass"
            app:leftText="@string/txt_new_login_pass"/>

        <include layout="@layout/layout_line_horizontal"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
            android:id="@+id/item_confirm_pass"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/size_12dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:hintText="@string/txt_please_input_confirm_new_pass"
            app:leftText="@string/txt_confirm_new_pass"/>

        <include layout="@layout/layout_line_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_8dp"
            android:paddingLeft="@dimen/size_12dp"
            android:text="@string/txt_login_pass_rule_prompt"
            android:textColor="@color/colorButtonSubmitSelect"
            android:textSize="@dimen/size_12dp"/>


        <Button
            android:id="@id/btn_confirm"
            style="@style/item_btn_style"
            android:background="@drawable/item_radius_btn_yellow_selector"
            android:text="@string/txt_save"/>


    </LinearLayout>
</layout>