<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activityBackgroundColor"
        android:orientation="vertical">


        <com.kscf.app.android.widget.DefToolBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background="@color/blue"
            app:isShowReturnView="true"
            app:title="@string/txt_reset_transaction_pass"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
            android:id="@+id/item_primitive_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/size_12dp"
            app:hintText="@string/txt_hold_card_person_name"
            app:leftText="@string/txt_real_name"/>

        <include layout="@layout/layout_line_horizontal"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
            android:id="@+id/item_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/size_12dp"
            app:hintText="@string/txt_please_input_18_id_card_number"
            app:leftText="@string/txt_id_card_number"/>

        <include layout="@layout/layout_line_horizontal"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
            android:id="@+id/item_confirm_pass"
            app:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/size_12dp"
            app:hintText="@string/txt_bank_reserve_phone_number"
            app:leftText="@string/txt_phone_number"/>


        <LinearLayout
            android:paddingRight="@dimen/size_12dp"
            android:paddingLeft="@dimen/size_12dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.kscf.app.android.widget.ItemLeftTxtRightInputLayout
                android:id="@+id/item_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:inputType="number"
                app:maxLength="6"
                app:hintText="@string/txt_please_input_6_verification_code"
                app:leftText="@string/txt_verification_code"/>


            <View
                android:layout_width="@dimen/size_1dp"
                android:layout_height="@dimen/size_18dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_8dp"
                android:background="@color/line_dialog_color"/>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/txt_get_verification_code"
                android:textColor="@color/txt_btn_verification_code_selector"/>

        </LinearLayout>


        <Button
            android:id="@id/btn_confirm"
            style="@style/btn_round_back_yellow_style"
            android:background="@drawable/item_radius_btn_yellow_selector"
            android:text="@string/txt_save"/>


    </LinearLayout>
</layout>