<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activityBackgroundColor"
        android:orientation="vertical">

        <com.kscf.app.android.widget.DefToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background="@color/blue"
            app:isShowReturnView="true"
            app:title="@string/txt_more_information"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightArrowLayout
            android:id="@+id/item_bind_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:isShowArrowView="false"
            app:leftText="@string/txt_bind_phone"
            app:rightText="136****9999"/>

        <include layout="@layout/layout_line_horizontal"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightArrowLayout
            android:id="@+id/item_identity_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:isShowArrowView="false"
            app:leftText="@string/txt_identity_info"
            app:rightText="583*****534085"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightArrowLayout
            android:id="@+id/item_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:background="@drawable/item_def_white_select_gray_selector"
            app:leftText="@string/txt_E_mail"/>

        <include layout="@layout/layout_line_horizontal"/>

        <com.kscf.app.android.widget.ItemLeftTxtRightArrowLayout
            android:id="@+id/item_job_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_def_white_select_gray_selector"
            app:leftText="@string/txt_job_category"/>


    </LinearLayout>
</layout>